--- a/CSS/create.css
+++ b/CSS/create.css
@@ -38,6 +38,8 @@ body{
     text-decoration: none;
 }
 
+
+
 .DropDownbar ul li{
     position: relative;
     float: left;
@@ -45,26 +47,17 @@ body{
     font-size: 15px;
     font-weight: bolder; 
     margin-right: 10px;
-    margin-left: 20px;
-    width: max-content;
+    margin-left: 20px;  
+    width: auto;
 }
 
 .DropDownbar ul li a{
     text-decoration: none;
     color: white;
     padding: 15px 20px;
-    text-align:  center; 
-    /* padding: 1rem; */
-    display: block  ;
+    text-align:  center;
 }
 
-.DropDownbar ul li a:hover{
-    /* font-size: 16px; */
-    background-color: white;
-    color: black;
-    transition: all 0.3s;
-    border-radius: 10px;
-}
 
 .sub-dropdown{
     list-style: none;
@@ -74,16 +67,16 @@ body{
     top: 35px;
     visibility: hidden;
     z-index: 1;
-    background-color: black;
-    color: white;
-    top: 65px;
-    text-align:justify;
 }
 
-/* li:hover .sub-dropdown{
+li:hover .sub-dropdown{
     opacity: 1;
+    top: 40px;
     visibility: visible;
-} */
+    background-color: black;
+    color: white;
+    text-align:justify;
+}
 
 .sub-dropdown li{
     float: none;
@@ -95,7 +88,7 @@ body{
     margin-left: 20px;
     box-sizing: border-box;
     width: 100px;
-    height: 50px;
+    height: 30px;
     background: transparent;
     color: white;
     font-family: 'Poppins', sans-serif;
@@ -108,17 +101,9 @@ body{
     transition: all 0.3s;
 }
 
-.login a {
-  color: #fff;
-}
-
-.login:hover a {
-  color: #000;
-}
-
 .login:hover{
     background: white;
-    color:black !important;
+    color:black;
     border: 3px solid white;
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
@@ -143,71 +128,6 @@ body{
 
 }
 
-.para-1 {
-    margin-left: 70%;
-    margin-right: 10%;
-    margin-top: 10%;
-    flex: 1;
-    padding: 20px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px black;
-    color: black;
-    margin-left: 20px;
-}
-
-
-.para-1:hover{
-    background-color: black;
-    color: white;
-    box-shadow: 0px 5px 5px black;
-    border-radius: 10px;
-    transition: 0.2s;
-    font-family: 'Poppins', sans-serif;
-    font-size: 30px;
-    font-weight: bolder;
-    text-align: center;
-}
-
-
-.p1{
-    font-family: 'Poppins', sans-serif;
-    font-size: 30px;
-    font-weight: bolder;
-    text-align: center;
-    position: relative;
-}
-
-.h3-1{
-    font-family: 'Poppins', sans-serif;
-    font-size: 30px;
-    font-weight: bolder;
-    text-align: center;
-}
-
-.intro-container{
-    margin-left: 8%;
-    margin-right: 8%;
-    margin-bottom:10%;
-}
-
-.intro-container:hover{
-    background-color: black;
-    color: white;
-    margin-left: 5%;
-    margin-right: 5%;
-    border-radius: 20px;
-    transition: 0.2s;
-}
-
-.intro-container:hover h1{
-    font-size: 25px;
-}
-
-.intro-container:hover .p3{
-    font-size: 22px;
-}
-
 h1{
     font-family: 'Poppins', sans-serif;
     font-size: 22px;
@@ -217,14 +137,9 @@ h1{
     text-align: center;
 }
 
-.p3{
-    font-family: 'Poppins', sans-serif;
-    font-size: 20px;
-    font-weight: bolder;
-    text-align: center;
-    position: relative;
+.form-container{
+  margin-top: 10%;
 }
-
 
 *{
     position: relative;
@@ -469,5 +384,4 @@ h1{
   }
 
 
-
-
+ 
