--- a/CSS/host.css
+++ b/CSS/host.css
@@ -38,6 +38,8 @@ body{
     text-decoration: none;
 }
 
+
+
 .DropDownbar ul li{
     position: relative;
     float: left;
@@ -45,21 +47,19 @@ body{
     font-size: 15px;
     font-weight: bolder; 
     margin-right: 10px;
-    margin-left: 20px;
-    width: max-content;
+    margin-left: 20px;  
+    width: auto;
 }
 
 .DropDownbar ul li a{
     text-decoration: none;
     color: white;
     padding: 15px 20px;
-    text-align:  center; 
-    /* padding: 1rem; */
-    display: block  ;
+    text-align:  center;
 }
 
 .DropDownbar ul li a:hover{
-    /* font-size: 16px; */
+    font-size: 17px;
     background-color: white;
     color: black;
     transition: all 0.3s;
@@ -74,16 +74,16 @@ body{
     top: 35px;
     visibility: hidden;
     z-index: 1;
-    background-color: black;
-    color: white;
-    top: 65px;
-    text-align:justify;
 }
 
-/* li:hover .sub-dropdown{
+li:hover .sub-dropdown{
     opacity: 1;
+    top: 40px;
     visibility: visible;
-} */
+    background-color: black;
+    color: white;
+    text-align:justify;
+}
 
 .sub-dropdown li{
     float: none;
@@ -95,7 +95,7 @@ body{
     margin-left: 20px;
     box-sizing: border-box;
     width: 100px;
-    height: 50px;
+    height: 30px;
     background: transparent;
     color: white;
     font-family: 'Poppins', sans-serif;
@@ -108,17 +108,9 @@ body{
     transition: all 0.3s;
 }
 
-.login a {
-  color: #fff;
-}
-
-.login:hover a {
-  color: #000;
-}
-
 .login:hover{
     background: white;
-    color:black !important;
+    color:black;
     border: 3px solid white;
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
@@ -144,8 +136,8 @@ body{
 }
 
 .para-1 {
-    margin-left: 70%;
-    margin-right: 10%;
+    margin: auto;
+    width: 50%;
     margin-top: 10%;
     flex: 1;
     padding: 20px;
@@ -153,7 +145,6 @@ body{
     border-radius: 10px;
     box-shadow: 5px 5px 5px black;
     color: black;
-    margin-left: 20px;
 }
 
 
@@ -224,6 +215,7 @@ h1{
     text-align: center;
     position: relative;
 }
+
 
 
 *{
