--- a/CSS/template.css
+++ b/CSS/template.css
@@ -14,8 +14,7 @@ body{
     align-items: center;
     background-color: white;
 }
-
-
+/* 
 .DropDownbar{
     position: fixed;
     top: 0;
@@ -36,7 +35,10 @@ body{
     font-weight: bolder;
     color: white;
     text-decoration: none;
+    
 }
+
+
 
 .DropDownbar ul li{
     position: relative;
@@ -45,21 +47,19 @@ body{
     font-size: 15px;
     font-weight: bolder; 
     margin-right: 10px;
-    margin-left: 20px;
-    width: max-content;
+    margin-left: 20px;  
+    width: auto;
 }
 
 .DropDownbar ul li a{
     text-decoration: none;
     color: white;
     padding: 15px 20px;
-    text-align:  center; 
-    /* padding: 1rem; */
-    display: block  ;
+    text-align:  center;
 }
 
 .DropDownbar ul li a:hover{
-    /* font-size: 16px; */
+    font-size: 17px;
     background-color: white;
     color: black;
     transition: all 0.3s;
@@ -74,16 +74,16 @@ body{
     top: 35px;
     visibility: hidden;
     z-index: 1;
-    background-color: black;
-    color: white;
-    top: 65px;
-    text-align:justify;
 }
 
-/* li:hover .sub-dropdown{
+li:hover .sub-dropdown{
     opacity: 1;
+    top: 40px;
     visibility: visible;
-} */
+    background-color: black;
+    color: white;
+    text-align:justify;
+}
 
 .sub-dropdown li{
     float: none;
@@ -95,7 +95,7 @@ body{
     margin-left: 20px;
     box-sizing: border-box;
     width: 100px;
-    height: 50px;
+    height: 30px;
     background: transparent;
     color: white;
     font-family: 'Poppins', sans-serif;
@@ -108,124 +108,75 @@ body{
     transition: all 0.3s;
 }
 
-.login a {
-  color: #fff;
-}
-
-.login:hover a {
-  color: #000;
-}
-
 .login:hover{
     background: white;
-    color:black !important;
+    color:black;
     border: 3px solid white;
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     font-weight: bolder;
     top: 0;
+} 
+*/
+
+.intro-container:hover h1{
+  font-size: 25px;
+}
+h1{
+  font-family: 'Poppins', sans-serif;
+  font-size: 22px;
+  font-weight: bolder;
+  text-align: center;
+  position: relative;
+  text-align: center;
 }
 
-.container {
-    display: flex;
-    align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.black-white {
-    margin-top: 5%;
-    margin-left: 200px;
-    width: 100%;
-    max-width: 800px;
-    height: 500px;
-    width: 600px;
-
-}
-
-.para-1 {
-    margin-left: 70%;
-    margin-right: 10%;
-    margin-top: 10%;
-    flex: 1;
-    padding: 20px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px black;
-    color: black;
-    margin-left: 20px;
-}
-
-
-.para-1:hover{
-    background-color: black;
-    color: white;
-    box-shadow: 0px 5px 5px black;
-    border-radius: 10px;
-    transition: 0.2s;
-    font-family: 'Poppins', sans-serif;
-    font-size: 30px;
-    font-weight: bolder;
-    text-align: center;
-}
-
-
-.p1{
-    font-family: 'Poppins', sans-serif;
-    font-size: 30px;
-    font-weight: bolder;
-    text-align: center;
-    position: relative;
-}
-
-.h3-1{
-    font-family: 'Poppins', sans-serif;
-    font-size: 30px;
-    font-weight: bolder;
-    text-align: center;
-}
-
-.intro-container{
-    margin-left: 8%;
+.rules-container{
+  margin-left: 8%;
     margin-right: 8%;
     margin-bottom:10%;
 }
-
-.intro-container:hover{
-    background-color: black;
-    color: white;
-    margin-left: 5%;
-    margin-right: 5%;
-    border-radius: 20px;
-    transition: 0.2s;
+.p2{
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+  /*text-align: center;*/
+  position: relative;
 }
-
-.intro-container:hover h1{
-    font-size: 25px;
-}
-
-.intro-container:hover .p3{
-    font-size: 22px;
-}
-
-h1{
-    font-family: 'Poppins', sans-serif;
-    font-size: 22px;
-    font-weight: bolder;
-    text-align: center;
-    position: relative;
-    text-align: center;
-}
-
 .p3{
-    font-family: 'Poppins', sans-serif;
-    font-size: 20px;
-    font-weight: bolder;
-    text-align: center;
-    position: relative;
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+  text-align: center;
+  position: relative;
+}
+.parent {
+  display: flex;
+  align-items: center;
 }
 
+.parent1 {
+  display: flex;
+  align-items: center;
+}
 
+.parent1 > img {
+  mix-blend-mode: multiply;
+  filter: grayscale(95%);
+  margin: 30px;
+  border-radius: 100%;
+}
+.parent > img {
+  mix-blend-mode: multiply;
+  filter: grayscale(95%);
+  margin: 20px;
+  border-radius: 20%;
+  box-shadow: 1px 1px 1px 1px;
+}
+
+.parent > img:hover{
+  transition: 0.3s;
+}
+
+/*footer*/
 *{
     position: relative;
     margin: 0;
