--- a/CSS/user.css
+++ b/CSS/user.css
@@ -38,6 +38,8 @@ body{
     text-decoration: none;
 }
 
+
+
 .DropDownbar ul li{
     position: relative;
     float: left;
@@ -45,21 +47,19 @@ body{
     font-size: 15px;
     font-weight: bolder; 
     margin-right: 10px;
-    margin-left: 20px;
-    width: max-content;
+    margin-left: 20px;  
+    width: auto;
 }
 
 .DropDownbar ul li a{
     text-decoration: none;
     color: white;
     padding: 15px 20px;
-    text-align:  center; 
-    /* padding: 1rem; */
-    display: block  ;
+    text-align:  center;
 }
 
 .DropDownbar ul li a:hover{
-    /* font-size: 16px; */
+    font-size: 17px;
     background-color: white;
     color: black;
     transition: all 0.3s;
@@ -74,16 +74,17 @@ body{
     top: 35px;
     visibility: hidden;
     z-index: 1;
-    background-color: black;
-    color: white;
-    top: 65px;
-    text-align:justify;
+    width: max-content;
 }
 
-/* li:hover .sub-dropdown{
+li:hover .sub-dropdown{
     opacity: 1;
+    top: 40px;
     visibility: visible;
-} */
+    background-color: black;
+    color: white;
+    text-align:justify;
+}
 
 .sub-dropdown li{
     float: none;
@@ -95,7 +96,7 @@ body{
     margin-left: 20px;
     box-sizing: border-box;
     width: 100px;
-    height: 50px;
+    height: 30px;
     background: transparent;
     color: white;
     font-family: 'Poppins', sans-serif;
@@ -108,17 +109,9 @@ body{
     transition: all 0.3s;
 }
 
-.login a {
-  color: #fff;
-}
-
-.login:hover a {
-  color: #000;
-}
-
 .login:hover{
     background: white;
-    color:black !important;
+    color:black;
     border: 3px solid white;
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
@@ -143,87 +136,101 @@ body{
 
 }
 
-.para-1 {
-    margin-left: 70%;
-    margin-right: 10%;
-    margin-top: 10%;
-    flex: 1;
-    padding: 20px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px black;
+
+.indication {
+    text-align: center;
+    font-weight: bolder;
+    margin-bottom: 3%;
+    font-size: 150%;
+    width: 100%;
+}
+
+@keyframes typing {
+    from {
+      width: 0;
+    }
+    to {
+      width: 100%; /* Adjust this to match the width of your text */
+    }
+}
+  
+.indication p {
+    overflow: hidden;
+    border-right: .15em solid black;
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: .15em;
+    animation: typing 3s steps(30, end), blink-caret .5s step-end infinite;
+}
+  
+@keyframes blink-caret {
+    from, to {
+        border-color: transparent;
+    }
+    50% {
+        border-color: black;
+    }
+}
+
+
+
+/*Search Box Styling*/
+.search-box{
+    width: fit-content;
+    height: fit-content;
+    position: relative;
+  }
+  .input-search{
+    height: 50px;
+    width: 50px;
+    border-style: none;
+    padding: 10px;
+    font-size: 18px;
+    letter-spacing: 2px;
+    outline: none;
+    border-radius: 25px;
+    transition: all .5s ease-in-out;
+    background-color: black;
+    padding-right: 40px;
     color: black;
-    margin-left: 20px;
-}
-
-
-.para-1:hover{
-    background-color: black;
-    color: white;
-    box-shadow: 0px 5px 5px black;
-    border-radius: 10px;
-    transition: 0.2s;
-    font-family: 'Poppins', sans-serif;
-    font-size: 30px;
-    font-weight: bolder;
-    text-align: center;
-}
-
-
-.p1{
-    font-family: 'Poppins', sans-serif;
-    font-size: 30px;
-    font-weight: bolder;
-    text-align: center;
-    position: relative;
-}
-
-.h3-1{
-    font-family: 'Poppins', sans-serif;
-    font-size: 30px;
-    font-weight: bolder;
-    text-align: center;
-}
-
-.intro-container{
-    margin-left: 8%;
-    margin-right: 8%;
-    margin-bottom:10%;
-}
-
-.intro-container:hover{
-    background-color: black;
-    color: white;
-    margin-left: 5%;
-    margin-right: 5%;
-    border-radius: 20px;
-    transition: 0.2s;
-}
-
-.intro-container:hover h1{
-    font-size: 25px;
-}
-
-.intro-container:hover .p3{
-    font-size: 22px;
-}
-
-h1{
-    font-family: 'Poppins', sans-serif;
-    font-size: 22px;
-    font-weight: bolder;
-    text-align: center;
-    position: relative;
-    text-align: center;
-}
-
-.p3{
-    font-family: 'Poppins', sans-serif;
+  }
+  .input-search::placeholder{
+    color:black;
+    font-size: 18px;
+    letter-spacing: 2px;
+    font-weight: 100;
+  }
+  .btn-search{
+    width: 50px;
+    height: 50px;
+    border-style: none;
     font-size: 20px;
-    font-weight: bolder;
-    text-align: center;
-    position: relative;
-}
+    font-weight: bold;
+    outline: none;
+    cursor: pointer;
+    border-radius: 50%;
+    position: absolute;
+    right: 0px;
+    color:black ;
+    background-color:transparent;
+    pointer-events: painted;  
+  }
+  .btn-search:focus ~ .input-search{
+    width: 300px;
+    border-radius: 0px;
+    background-color: transparent;
+    border-bottom:1px solid black;
+    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+  }
+  .input-search:focus{
+    width: 300px;
+    border-radius: 0px;
+    background-color: transparent;
+    border-bottom:1px solid black;
+    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+  }
+  
+  
 
 
 *{
